# Semantic-Image-Manipulation

./: docker-compose.yml  download_models.ps1
backend/: .dockerignore  .gitignore  database.sqlite  dockerfile  entry_point.sh  main.ipynb  main.py  pyproject.toml  requirements.txt
backend/backend/: __init__.py  commands.py  database.py  models.py  tasks.py
backend/backend/celery_app/: __init__.py
backend/backend/masking/: MaskGenerator.py
backend/backend/ml/Editor/: Editor.py
backend/backend/ml/Inpainter/: Inpainter.py  default.yaml
backend/backend/ml/Inpainter/saicinpainting/evaluation/: __init__.py  data.py  evaluator.py
backend/backend/ml/Inpainter/saicinpainting/evaluation/losses/: base_loss.py  lpips.py
backend/backend/ml/Inpainter/saicinpainting/training/data/: datasets.py  masks.py
backend/backend/ml/Inpainter/saicinpainting/training/losses/: distance_weighting.py  perceptual.py
backend/backend/ml/Inpainter/saicinpainting/training/modules/: __init__.py  base.py  ffc.py  multidilated_conv.py  multiscale.py  pix2pixhd.py
backend/backend/ml/Inpainter/saicinpainting/training/trainers/: __init__.py  base.py  default.py
backend/backend/ml/ObjectDetector/: ObjectDetector.py  labels.json
backend/backend/ml/lama/: LaMa.py
backend/backend/ml/yolo/: YOLO.py
backend/backend/views/: __init__.py  detection.py  editing.py  images.py  inpainting.py  tasks.py
backend/masking/: MaskGenerator.py
backend/ml/yolo/: YOLO.py
backend/painting/: BBoxesPainter.py
backend/shared/: math.py
frontend/: analysis_options.yaml  pubspec.yaml
(+92 files in other folders)
